Added links to projects

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
   - title: "Projects"
     url: /projects/ 
   - title: "About"
-    url: https://otnielmercea.github.io
+    url: https://merceaotniel.github.io
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
