--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
 author:
   name             : "Otniel-Bogdan Mercea"
   avatar           : "/images/profile_picture.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "PhD student with the goal of making ML systems that can explain their decisions and that can learn in a data-efficient way"
+  bio              : "PhD student with the goal of creating ML systems that can explain their decisions and that can learn in a data-efficient way"
   location         : "Tübingen - Germany"
   email            : "otimercea@gmail.com"
   uri              :
