Added google scholarish...not final

--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ author:
   foursquare       :
   github           : "MerceaOtniel"
   gitlab           :
-  google_plus      :
+  google_plus      : "citations?user=eSPY7nMAAAAJ&hl=en"
   keybase          :
   instagram        :
   lastfm           :
