--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ author:
   linkedin         : "otniel-bogdan-mercea-76b742125" # "john-doe-12345678" (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
   pinterest        :
   soundcloud       :
-  stackoverflow    : # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
+  stackoverflow    : "4178517/otniel-bogdan-mercea"
   steam            : # "steamId" (the last part of your profile url, e.g. https://steamcommunity.com/id/steamId/)
   tumblr           :
   twitter          : "MerceaOtniel"
