--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
 author:
   name             : "Otniel-Bogdan Mercea"
   avatar           : "/images/profile_picture.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "PhD student with the goal of creating ML systems that can explain their decisions and that can learn in a data-efficient way"
+  bio              : "Interested in Multi-modal efficient learning. Ph.D. @ IMPRS-IS. Previously Intern @ Google Research, ML Researcher @ Everseen, MSc @ Edinburgh University."
   location         : "Munich - Germany"
   email            : "otimercea@gmail.com"
   uri              :
