--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,6 +16,8 @@ main:
     url: /patents/
   - title: "Supervision"
     url: /supervision/
+  - title: "Teaching"
+    url: /teaching/
   - title: "Projects"
     url: /projects/
 
