--- a/_config.yml
+++ b/_config.yml
@@ -103,9 +103,9 @@ analytics:
 author:
   name             : "Otniel-Bogdan Mercea"
   avatar           : "/images/profile_picture.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Interested in Multi-modal efficient learning. Ph.D. at IMPRS-IS. Previously 2 x Intern at Google Research, ML Researcher at Everseen, MSc at Edinburgh University."
+  bio              : "Interested in Multi-modal efficient learning. Ph.D. at IMPRS-IS. Prev. 2 x Intern at Google Research, ML Researcher at Everseen, MSc at Edinburgh University."
   location         : "Munich - Germany"
-  email            : "otimercea@gmail.com"
+  email            : "otimercea at gmail.com"
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
   bitbucket        :
