--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ author:
   name             : "Otniel-Bogdan Mercea"
   avatar           : "/images/profile_picture.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Research Intern at Google DeepMind | Ph.D. at IMPRS-IS, Helmholtz Munich, TUM | MSc Edinburgh University | Prev. 2 x Google Research | Multi-modal efficient learning."
-  location         : "Munich - Germany"
+  location         : "Zurich - Switzerland"
   email            : "otimercea at gmail.com"
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
