--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -4,10 +4,10 @@
 
 # acm_id: # your dl.acm.org/profile/id
 # blogger_url: # your blogger URL
-# bluesky_url: # your bluesky URL
+bluesky_url: https://bsky.app/profile/merceaotniel.bsky.social
 # dblp_url: # your DBLP profile url
 # discord_id: # your discord id (18-digit unique numerical identifier)
-email: otimercea@gmail.com # your email address
+email: otimercea (at) gmail.com # your email address
 # facebook_id: # your facebook id
 # flickr_id: # your flickr id
 github_username: MerceaOtniel # your GitHub user name
