--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -28,7 +28,7 @@ linkedin_username: otnielmercea # your LinkedIn user name
 # pinterest_id: # your pinterest id
 # publons_id: # your ID on Publons
 # quora_username: # your Quora username
-# research_gate_profile: # your profile on ResearchGate
+research_gate_profile: Otniel-Bogdan-Mercea # your profile on ResearchGate
 #rss_icon: true # set to true to show the RSS icon
 scholar_userid: eSPY7nMAAAAJ # your Google Scholar ID
 # scopus_id: # your profile on Scopus
